Fix site and caption handling, update MQTT, and add view.
Improved site assignment logic in `BlockSelector` and streamlined caption handling in `ObjectViewer`. Introduced new statistics and methods in `MQTT`, alongside a new `MQTTDataView` for monitoring and interaction. Synchronized tree scanning in `AlertGenerator` and fine-tuned existing UI components for better usability. Updated dependencies and version numbers in `pom.xml`.